# survey-medley-model-exploration

./: .gitignore  README.md  pyproject.toml
code/: code_checks.ipynb  explore_desmat.ipynb  simulation_code.py  survey_medley_rt_modeling_exporation.ipynb
data/event_files/: s061_ANT_events.tsv  s061_CCTHot_events.tsv  s061_DPX_events.tsv  s061_WATT3_events.tsv  s061_discountFix_events.tsv  s061_modified_surveyMedley_events.tsv  s061_motorSelectiveStop_events.tsv  s061_stopSignal_events.tsv  s061_stroop_events.tsv  s061_surveyMedley_events.tsv  s061_twoByTwo_events.tsv  s130_ANT_events.tsv  s130_CCTHot_events.tsv  s130_DPX_events.tsv  s130_WATT3_events.tsv  s130_discountFix_events.tsv  s130_modified_surveyMedley_events.tsv  s130_motorSelectiveStop_events.tsv  s130_stopSignal_events.tsv  s130_stroop_events.tsv  s130_surveyMedley_events.tsv  s130_twoByTwo_events.tsv  s144_ANT_events.tsv  s144_CCTHot_events.tsv  s144_WATT3_events.tsv  s144_stopSignal_events.tsv  s144_twoByTwo_events.tsv  s172_ANT_events.tsv  s172_CCTHot_events.tsv  s172_DPX_events.tsv  s172_WATT3_events.tsv  s172_discountFix_events.tsv  s172_modified_surveyMedley_events.tsv  s172_motorSelectiveStop_events.tsv  s172_stopSignal_events.tsv  s172_stroop_events.tsv  s172_surveyMedley_events.tsv  s172_twoByTwo_events.tsv  s192_ANT_events.tsv  s192_CCTHot_events.tsv  (+1130 more)
data/simplified_events/: sub-061_task-surveyMedley_design-matrix.csv  sub-061_task-surveyMedley_simplified-events.csv  sub-130_task-surveyMedley_design-matrix.csv  sub-130_task-surveyMedley_simplified-events.csv  (+201 more)
(+200 files in other folders)
